fix fb-comments inconsistant width on mobile 3

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -99,7 +99,7 @@ dd {
 }
 
 /* fix fb-comments inconsistant width on mobile */
-.fb_iframe_widget_fluid span, iframe.fb_ltr {
+.fb_iframe_widget span, iframe.fb_ltr {
   width: 100% !important;
 }
 
